Fix navbar collapse and logo for #13 #22

--- a/tr-app/static/styles.css
+++ b/tr-app/static/styles.css
@@ -1268,6 +1268,9 @@ nav
     line-height: 27px;
 }
 
+.navbar-header {
+    padding-bottom: 10px;
+}
 
 
 .dropdown-menu a:hover,
@@ -1447,4 +1450,8 @@ textarea
 
 .col-platforms {
     padding: 20px;
+}
+
+#main-div {
+    margin-top: 120px;
 }
